# cuda-raytracing

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cpu/: CMakeLists.txt
cpu/include/: defs.h  model.h
cpu/src/: defs.c  main.c  model.c
include/raytracing/: cuda_defs.cuh  cuda_model.cuh  stdhead.h  wrapper.h
src/: main.c
src/cuda/: cuda_defs.cu  cuda_model.cu  raytracer.cu
